--- a/src/components/ShareBar/styles.module.css
+++ b/src/components/ShareBar/styles.module.css
@@ -35,7 +35,7 @@
 @media screen and (min-width: 768px) {
   .root {
     flex-direction: column;
-    width: 46px;
+    width: 32px;
   }
 
   .button {
